@@ -1,7 +1,7 @@
 Package: cxxPack
 Title: R/C++ Tools for Literate Statistical Practice
-Version: 7.0.4
-Date: 2010-06-14
+Version: 7.0.5
+Date: 2010-07-03
 Author: Dominick Samperi
 Maintainer: Dominick Samperi <djsamperi@gmail.com>
 Description: Builds on the Rcpp package/library by providing an
@@ -16,9 +16,9 @@ Description: Builds on the Rcpp package/library by providing an
         research compendium documents following literate statistical
         practice that have embedded R and C++ code chunks. There is a
         package vignette that provides many examples.
-Depends: R (>= 2.10.0), Rcpp (>= 0.8.1), RUnit, zoo
+Depends: R (>= 2.10.0), Rcpp (>= 0.8.2), RUnit, zoo
 SystemRequirements: GNU make
 License: GPL-3
 Repository: CRAN
-Packaged: 2010-06-14 20:34:16 UTC; dsamperi
-Date/Publication: 2010-06-15 08:50:14
+Packaged: 2010-07-04 13:25:38 UTC; dsamperi
+Date/Publication: 2010-07-05 11:20:42
